// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PipelineErrorDialog /> should render with minimal props 1`] = `
<PipelineErrorDialog
  actions={[]}
  message=""
  params={
    {
      "code": "123",
      "message": "Error message",
      "pipeline": "fakePipeline",
      "request": {},
    }
  }
>
  <BasicDialog
    actions={[]}
    title="modal.title_error"
  >
    <FocusTrap>
      <div
        aria-labelledby="basicDialogTitle basicDialogDesc"
        aria-modal={true}
        className="sg-1at7hhn-container ui-ios__base-dialog"
        data-test-id="basicDialog"
        role="alertdialog"
      >
        <div
          className="sg-1o3pu1m-content"
        >
          <Title
            title="modal.title_error"
          >
            <div
              aria-level="2"
              className="sg-1prssjv-title"
              id="basicDialogTitle"
              role="heading"
            >
              <Ellipsis
                className=""
                rows={3}
              >
                <Dotdotdot
                  clamp={3}
                  className=" common__ellipsis"
                  tagName="div"
                  truncationChar="…"
                  useNativeClamp={true}
                >
                  <div
                    className=" common__ellipsis"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="modal.title_error"
                      transform={null}
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        modal.title_error
                      </span>
                    </Translate>
                  </div>
                </Dotdotdot>
              </Ellipsis>
            </div>
          </Title>
          <Content
            content={
              <div
                onClick={[Function]}
              >
                <React.Fragment>
                  <Translate
                    acceptPlainTextWithPlaceholders={false}
                    className={null}
                    params={{}}
                    role={null}
                    string="Error message"
                    transform={null}
                  />
                </React.Fragment>
              </div>
            }
          >
            <ForwardRef(Typography)
              align="center"
              className="sg-1u4u647-body"
              component="div"
              id="basicDialogDesc"
              variant="body2"
            >
              <div
                className="engage__typography engage__typography_body2 sg-dqeyds-Typography-root-Typography-body2-Typography-alignCenter-body"
                id="basicDialogDesc"
              >
                <div
                  onClick={[Function]}
                >
                  <Translate
                    acceptPlainTextWithPlaceholders={false}
                    className={null}
                    params={{}}
                    role={null}
                    string="Error message"
                    transform={null}
                  >
                    <span
                      className={null}
                      role={null}
                    >
                      Error message
                    </span>
                  </Translate>
                </div>
              </div>
            </ForwardRef(Typography)>
          </Content>
        </div>
        <div
          className="sg-knc55g-actions"
        >
          <Buttons
            actions={[]}
          />
        </div>
      </div>
    </FocusTrap>
  </BasicDialog>
</PipelineErrorDialog>
`;

exports[`<PipelineErrorDialog /> should show a custom message if a message is is provided 1`] = `
<PipelineErrorDialog
  actions={[]}
  message="Custom message"
  params={
    {
      "code": "123",
      "message": "Error message",
      "pipeline": "fakePipeline",
      "request": {},
    }
  }
>
  <BasicDialog
    actions={[]}
    title="modal.title_error"
  >
    <FocusTrap>
      <div
        aria-labelledby="basicDialogTitle basicDialogDesc"
        aria-modal={true}
        className="sg-1at7hhn-container ui-ios__base-dialog"
        data-test-id="basicDialog"
        role="alertdialog"
      >
        <div
          className="sg-1o3pu1m-content"
        >
          <Title
            title="modal.title_error"
          >
            <div
              aria-level="2"
              className="sg-1prssjv-title"
              id="basicDialogTitle"
              role="heading"
            >
              <Ellipsis
                className=""
                rows={3}
              >
                <Dotdotdot
                  clamp={3}
                  className=" common__ellipsis"
                  tagName="div"
                  truncationChar="…"
                  useNativeClamp={true}
                >
                  <div
                    className=" common__ellipsis"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="modal.title_error"
                      transform={null}
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        modal.title_error
                      </span>
                    </Translate>
                  </div>
                </Dotdotdot>
              </Ellipsis>
            </div>
          </Title>
          <Content
            content={
              <div
                onClick={[Function]}
              >
                <React.Fragment>
                  <Translate
                    acceptPlainTextWithPlaceholders={false}
                    className={null}
                    params={{}}
                    role={null}
                    string="Custom message"
                    transform={null}
                  />
                </React.Fragment>
              </div>
            }
          >
            <ForwardRef(Typography)
              align="center"
              className="sg-1u4u647-body"
              component="div"
              id="basicDialogDesc"
              variant="body2"
            >
              <div
                className="engage__typography engage__typography_body2 sg-dqeyds-Typography-root-Typography-body2-Typography-alignCenter-body"
                id="basicDialogDesc"
              >
                <div
                  onClick={[Function]}
                >
                  <Translate
                    acceptPlainTextWithPlaceholders={false}
                    className={null}
                    params={{}}
                    role={null}
                    string="Custom message"
                    transform={null}
                  >
                    <span
                      className={null}
                      role={null}
                    >
                      Custom message
                    </span>
                  </Translate>
                </div>
              </div>
            </ForwardRef(Typography)>
          </Content>
        </div>
        <div
          className="sg-knc55g-actions"
        >
          <Buttons
            actions={[]}
          />
        </div>
      </div>
    </FocusTrap>
  </BasicDialog>
</PipelineErrorDialog>
`;
